--- a/app/client/templates/components/accounts.html
+++ b/app/client/templates/components/accounts.html
@@ -54,12 +54,9 @@
         {{/each}}
         </div>
 
-        <button class="wallet-box add-token">
-            <div class="account-pattern">
-                +
-            </div>
+        <button class="add-token">
             <h3>{{i18n "wallet.app.buttons.addToken"}}</h3>
         </button>
+</div>
 
-    </div>
 </template>
