--- a/app/client/templates/layout/main.html
+++ b/app/client/templates/layout/main.html
@@ -6,7 +6,11 @@
 	<main class="container-fluid">
 		{{> yield}}
 	</main>
-    
+
     <!-- The dynamic page footer -->
     {{> yield region="footer"}}
+
+    <!-- Modal placeholder -->
+    {{> dapp_modalPlaceholder}}
+
 </template>
