--- a/app/client/templates/views/userEdit.html
+++ b/app/client/templates/views/userEdit.html
@@ -1,7 +1,7 @@
-<template name="views_view1">
+<template name="views_userEdit">
  <div class="row-fluid">
 	<div class="col-md-12">
- 		{{> components_balance}}
+ 		{{> components_userAccounts}}
 	</div>
  </div>
 </template>
