--- a/app/client/templates/views/view2.html
+++ b/app/client/templates/views/view2.html
@@ -1,7 +1,7 @@
 <template name="views_view2">
  <div class="row-fluid">
 	<div class="col-md-6">
- 		{{> components_multiplyContract}}
+ 		{{> components_send}}
 	</div>
 	<div class="col-md-6">
 	</div>
