--- a/app/client/templates/components/balance.html
+++ b/app/client/templates/components/balance.html
@@ -4,8 +4,10 @@
             {{i18n 'dapp.components.balance.header'}}
         </div>
         <div class="panel-body">
-            {{i18n 'dapp.components.balance.original'}}: 
-            <strong>{{ watchBalance }} </strong> ether
+            {{i18n 'dapp.components.balance.original'}}:
+            {{#with accounts=accounts tokens=tokens}}
+              <strong>{{ sumTokens }} </strong>
+            {{/with}}
         </div>
     </div>
 </template>
