--- a/app/client/templates/layout/_header.html
+++ b/app/client/templates/layout/_header.html
@@ -2,7 +2,7 @@
 	<nav class="navbar navbar-default">
 		<div class="container-fluid">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="/">
+				<a class="navbar-brand" href="{{ pathFor route='view1' }}">
                     {{{i18n 'dapp.app.title'}}}
                 </a>
 			</div>
@@ -18,6 +18,19 @@
                         {{{i18n 'dapp.app.buttons.view2'}}}
                     </a>
                 </li>
+				<li>
+										<a href="{{ pathFor 'admin' }}">
+												{{{i18n 'dapp.app.buttons.admin'}}}
+										</a>
+								</li>
+				<li>
+										<a href="{{ pathFor 'userEdit' }}">
+												{{{i18n 'dapp.app.buttons.userEdit'}}}
+										</a>
+								</li>
+				<li>
+					{{> loginButtons align = "right"}}
+								</li>
 			</ul>
 		</div>
 	</nav>
